[gd_scene load_steps=10 format=3 uid="uid://bgu3ettrwvvmj"]

[ext_resource type="Script" path="res://src/screens/game/pause/game_sc_pause.gd" id="1_j3la8"]
[ext_resource type="PackedScene" uid="uid://cvavh583vaej5" path="res://src/ui/ps3_round_big_button.tscn" id="2_gs0ki"]
[ext_resource type="PackedScene" uid="uid://d1k0e4sdhttff" path="res://src/screens/game/pause/char_select_card/game_sc_pause_char_select_card.tscn" id="3_32rwu"]
[ext_resource type="Texture2D" uid="uid://cy24qnltuibav" path="res://res/img/characters/_template/portrait.png" id="4_e0b4l"]
[ext_resource type="FontFile" uid="uid://daml7kmeoclcl" path="res://res/fonts/jost/Jost-Regular.ttf" id="5_idc2c"]
[ext_resource type="Script" path="res://src/screens/game/pause/char/game_sc_pause_char.gd" id="6_oudf2"]
[ext_resource type="FontFile" uid="uid://cbevli85r4wpn" path="res://res/fonts/jost/Jost-BoldItalic.ttf" id="6_pc315"]
[ext_resource type="Script" path="res://src/screens/game/pause/char/game_sc_pause_char_tech.gd" id="8_wejph"]
[ext_resource type="FontFile" uid="uid://bhvqs8dtae8pv" path="res://res/fonts/jost/Jost-Italic.ttf" id="9_esgmp"]

[node name="GameScPause" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_j3la8")

[node name="background" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -565.0
offset_top = -225.0
offset_right = 565.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="root_content" type="Node2D" parent="."]
visible = false

[node name="status" type="VBoxContainer" parent="root_content"]
offset_left = -518.0
offset_top = -192.0
offset_right = -166.0
offset_bottom = 194.0
alignment = 1

[node name="meseta" type="HBoxContainer" parent="root_content/status"]
layout_mode = 2

[node name="label" type="Label" parent="root_content/status/meseta"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 32
text = "Meseta:"

[node name="value" type="Label" parent="root_content/status/meseta"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2

[node name="buttons1" type="VBoxContainer" parent="root_content"]
offset_left = -68.0
offset_top = -146.0
offset_right = 231.0
offset_bottom = 165.0

[node name="items_btn" parent="root_content/buttons1" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_top = NodePath("../order_btn")
focus_neighbor_right = NodePath("../../buttons2/macro_btn")
focus_neighbor_bottom = NodePath("../character_btn")

[node name="label" parent="root_content/buttons1/items_btn/control" index="1"]
text = "Items"

[node name="character_btn" parent="root_content/buttons1" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_top = NodePath("../items_btn")
focus_neighbor_right = NodePath("../../buttons2/talk_btn")
focus_neighbor_bottom = NodePath("../order_btn")

[node name="label" parent="root_content/buttons1/character_btn/control" index="1"]
text = "Character"

[node name="order_btn" parent="root_content/buttons1" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_top = NodePath("../character_btn")
focus_neighbor_right = NodePath("../../buttons2/system_btn")
focus_neighbor_bottom = NodePath("../items_btn")

[node name="label" parent="root_content/buttons1/order_btn/control" index="1"]
text = "Order"

[node name="buttons2" type="VBoxContainer" parent="root_content"]
offset_left = 226.0
offset_top = -80.0
offset_right = 518.0
offset_bottom = 193.0

[node name="macro_btn" parent="root_content/buttons2" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_left = NodePath("../../buttons1/items_btn")
focus_neighbor_top = NodePath("../system_btn")
focus_neighbor_bottom = NodePath("../talk_btn")

[node name="label" parent="root_content/buttons2/macro_btn/control" index="1"]
text = "Macro"

[node name="talk_btn" parent="root_content/buttons2" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_left = NodePath("../../buttons1/character_btn")
focus_neighbor_bottom = NodePath("../system_btn")

[node name="label" parent="root_content/buttons2/talk_btn/control" index="1"]
text = "Talk"

[node name="system_btn" parent="root_content/buttons2" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_left = NodePath("../../buttons1/order_btn")
focus_neighbor_bottom = NodePath("../macro_btn")

[node name="label" parent="root_content/buttons2/system_btn/control" index="1"]
text = "System"

[node name="character_selection" type="Node2D" parent="."]
visible = false

[node name="scroll_list" type="ScrollContainer" parent="character_selection"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -208.0
offset_right = 194.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="list" type="HBoxContainer" parent="character_selection/scroll_list"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="GameScPauseCharSelectCard" parent="character_selection/scroll_list/list" instance=ExtResource("3_32rwu")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="back_btn" parent="character_selection" instance=ExtResource("2_gs0ki")]
offset_left = 257.0
offset_top = 120.0
offset_right = 527.0
offset_bottom = 200.0

[node name="label" parent="character_selection/back_btn/control" index="1"]
text = "Back"

[node name="character" type="Node2D" parent="."]
script = ExtResource("6_oudf2")

[node name="portrait" type="TextureRect" parent="character"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -514.0
offset_top = -172.0
offset_right = -286.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_e0b4l")

[node name="status" type="Node2D" parent="character"]
visible = false
position = Vector2(-1, 0)

[node name="left" type="VBoxContainer" parent="character/status"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -210.0
offset_right = 58.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2

[node name="name" type="Label" parent="character/status/left"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 40
text = "undefined"

[node name="hp" type="HBoxContainer" parent="character/status/left"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/left/hp"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "HP:"

[node name="ratio" type="Label" parent="character/status/left/hp"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0/0"
horizontal_alignment = 2

[node name="tp" type="HBoxContainer" parent="character/status/left"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/left/tp"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "TP:"

[node name="ratio" type="Label" parent="character/status/left/tp"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0/0"
horizontal_alignment = 2

[node name="experience" type="HBoxContainer" parent="character/status/left"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/left/experience"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "Exp:"

[node name="ratio" type="Label" parent="character/status/left/experience"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0/0"
horizontal_alignment = 2

[node name="speed" type="HBoxContainer" parent="character/status/left"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/left/speed"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "Speed:"

[node name="value" type="Label" parent="character/status/left/speed"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 2

[node name="damage" type="HBoxContainer" parent="character/status/left"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/left/damage"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "Damage:"

[node name="value" type="Label" parent="character/status/left/damage"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 2

[node name="defense" type="HBoxContainer" parent="character/status/left"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/left/defense"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "Defense:"

[node name="value" type="Label" parent="character/status/left/defense"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 2

[node name="intelligence" type="HBoxContainer" parent="character/status/left"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/left/intelligence"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "Intelligence:"

[node name="value" type="Label" parent="character/status/left/intelligence"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 2

[node name="stamina" type="HBoxContainer" parent="character/status/left"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/left/stamina"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "Stamina:"

[node name="value" type="Label" parent="character/status/left/stamina"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 2

[node name="right" type="VBoxContainer" parent="character/status"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 121.0
offset_top = -142.0
offset_right = 508.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2

[node name="luck" type="HBoxContainer" parent="character/status/right"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/right/luck"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "Luck:"

[node name="value" type="Label" parent="character/status/right/luck"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 2

[node name="skill" type="HBoxContainer" parent="character/status/right"]
layout_mode = 2

[node name="label" type="Label" parent="character/status/right/skill"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 23
text = "Skill:"

[node name="value" type="Label" parent="character/status/right/skill"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_idc2c")
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 2

[node name="tech_btn" parent="character/status/right" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_top = NodePath("../back_btn")

[node name="label" parent="character/status/right/tech_btn/control" index="1"]
text = "Tech"

[node name="equipment_btn" parent="character/status/right" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="label" parent="character/status/right/equipment_btn/control" index="1"]
text = "Equipment"

[node name="back_btn" parent="character/status/right" instance=ExtResource("2_gs0ki")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_bottom = NodePath("../tech_btn")

[node name="label" parent="character/status/right/back_btn/control" index="1"]
text = "Back"

[node name="tech" type="Node2D" parent="character"]
script = ExtResource("8_wejph")

[node name="header" type="Label" parent="character/tech"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -202.0
offset_right = 346.5
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_pc315")
theme_override_font_sizes/font_size = 56
text = "Tech"
uppercase = true

[node name="scroll_list" type="ScrollContainer" parent="character/tech"]
offset_left = -207.0
offset_top = -99.0
offset_right = 463.0
offset_bottom = 82.0
follow_focus = true
horizontal_scroll_mode = 0

[node name="list" type="HFlowContainer" parent="character/tech/scroll_list"]
layout_mode = 2
size_flags_horizontal = 3

[node name="back_btn" parent="character/tech" instance=ExtResource("2_gs0ki")]
offset_left = -254.0
offset_top = 120.0
offset_right = 16.0
offset_bottom = 200.0

[node name="label" parent="character/tech/back_btn/control" index="1"]
text = "Back"

[node name="tech_description" type="ScrollContainer" parent="character/tech"]
offset_left = 34.0
offset_top = 107.0
offset_right = 520.0
offset_bottom = 206.0
horizontal_scroll_mode = 0

[node name="label" type="Label" parent="character/tech/tech_description"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("9_esgmp")
theme_override_font_sizes/font_size = 20
text = "Tech: Description."
autowrap_mode = 3

[editable path="root_content/buttons1/items_btn"]
[editable path="root_content/buttons1/character_btn"]
[editable path="root_content/buttons1/order_btn"]
[editable path="root_content/buttons2/macro_btn"]
[editable path="root_content/buttons2/talk_btn"]
[editable path="root_content/buttons2/system_btn"]
[editable path="character_selection/back_btn"]
[editable path="character/status/right/tech_btn"]
[editable path="character/status/right/equipment_btn"]
[editable path="character/status/right/back_btn"]
[editable path="character/tech/back_btn"]
